{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 6,
  "lineage": "9b6a1725-0498-066a-4bd5-462c505e049f",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0aa78f446b4499266",
            "arn": "arn:aws:ec2:eu-north-1:401942139206:instance/i-044f0bda54534ed9a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "EC2-Terraform-Role",
            "id": "i-044f0bda54534ed9a",
            "instance_id": "i-044f0bda54534ed9a",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "key_name": "demo_week_2_key",
            "launch_time": "2025-11-12T11:31:08Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0c32c323107ebe6f0",
            "placement_partition_number": 0,
            "private_dns": "ip-172-31-17-107.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.107",
            "public_dns": "ec2-51-21-128-68.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.128.68",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0184b78a73959ceb1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "launch-wizard-3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe00bcd535ed118b",
            "tags": {
              "Name": "webserver01_week3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f0e0c1b770eddfc4"
            ]
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "of_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:401942139206:subnet/subnet-0fe00bcd535ed118b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "available_ip_address_count": 4089,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe00bcd535ed118b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "401942139206",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "state": "available",
            "vpc_id": "vpc-0eac4ff19b6b55ef0"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "of_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:401942139206:vpc/vpc-0eac4ff19b6b55ef0",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07e6b74f45297f8fa",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-075a48b2e4f8c6b69",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eac4ff19b6b55ef0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-049a51a201c102ef8",
            "owner_id": "401942139206",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:401942139206:security-group/sg-0899010b005f8b209",
            "description": "Erlaubt HTTP auf Port 5000 zur bestehenden EC2-Instanz",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0899010b005f8b209",
            "ingress": [
              {
                "cidr_blocks": [
                  "185.244.154.210/32"
                ],
                "description": "Flask-App Port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "app-5000-sg",
            "name_prefix": "",
            "owner_id": "401942139206",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eac4ff19b6b55ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401942139206",
            "id": "sg-0899010b005f8b209",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_instance.existing",
            "data.aws_subnet.of_instance",
            "data.aws_vpc.of_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:401942139206:security-group/sg-073ae41250765a555",
            "description": "Postgres nur von EC2-App-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073ae41250765a555",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres von App-SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0899010b005f8b209"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-from-app-sg",
            "name_prefix": "",
            "owner_id": "401942139206",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eac4ff19b6b55ef0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "401942139206",
            "id": "sg-073ae41250765a555",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "data.aws_instance.existing",
            "data.aws_subnet.of_instance",
            "data.aws_vpc.of_instance"
          ]
        }
      ]
    }
  ]
}